// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`idle adult: the creature and the footer 1`] = `
"           ▄▀▀▄       ▄▀▀▄█▀█
           █████▄▄▄▄▄█████▀▀▀
        ▄▀███▀█████████▀███▀▄
        ████▀█▀███████▀█▀████
        █████████▀▀▀█████████
         ███████▀▀▀▀▀███████
          ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀
           ▄▀███████████▀▄▀██
          ████████████████ ▀▀
          █▀▀█       █▀▀█

~/projects/dotfiles:master

• OpenCode 1.18.31"
`;

exports[`hurt egg: draws the egg, no mood or xp text, and the footer 1`] = `
"               ▄█▀▀▄▄▄
             ▄▀███████▀▄
            ▄▀█████████▀▄
            ██▀▀▀▀▀█▀▀▀██
            ██▀█▀▀▀█▀▀▀██
            ████████▀▀▀██
            █████████████
            █████████████
             ███████████
              ▀▀▀▀▀▀▀▀▀

~/projects/dotfiles:master

• OpenCode 1.18.31"
`;

exports[`a Bubble sits above the sprite; petting changes the drawn sprite 1`] = `
"              .------.
             ( May I? )
              '---o--'
           ▄▀▀▄  ▄ ▄  ▄▀▀▄█▀█
           ███████████████▀▀▀
        ▄▀██▀█▀██▀█▀██▀█▀██▀▄
        █████▀█████████▀█████
        █████████▀▀▀█████████
         ███████▀▀▀▀▀███████
          ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀
           ▄▀███████████▀▄▀██
          ████████████████ ▀▀
          █▀▀█       █▀▀█

~/projects/dotfiles:master

• OpenCode 1.18.31"
`;

exports[`a pending Draw changes the drawn sprite; none without one 1`] = `
"           ███▀▄     ▄▀████▀█
           ██████▄▄▄██████▀▀▀
        ▄▀███▀█████████▀███▀▄
        ████▀█▀███████▀█▀████
        ▀████████▀▀▀████████▀
         ███████▀▀▀▀▀███████
          ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
           ▄▀███████████▀▄▀██
          ██████████████▀▄▀▀█
          █▀▀█       █▀▀█

~/projects/dotfiles:master

• OpenCode 1.18.31"
`;
